--- a/package.json
+++ b/package.json
@@ -11,14 +11,22 @@
     "url": "git+https://github.com/envisioning/eslint-config.git"
   },
   "peerDependencies": {
-    "babel-eslint": "^7.2.3",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^15.1.0",
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.1.0"
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0"
   },
-  "author": "Lucas N. Munhoz <@lnmunhoz",
+  "devDependencies": {
+    "babel-eslint": "^8.0.1",
+    "eslint": "^4.9.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-react": "7.4.0"
+  },
+  "author": "Lucas N. Munhoz <@lnmunhoz>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/envisioning/eslint-config/issues"
