--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@envisioning/eslint-config",
-  "version": "1.0.1",
+  "version": "1.2.0",
   "description": "Official eslint config to be shared across Envisioning's apps",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
